tests/lean/typeOf.lean.expected.out
typeOf.lean:11:21: error: application type mismatch
  HasAdd.add x
argument
  x
has type
  Nat
but is expected to have type
  Bool
failed to synthesize instance
  CoeT Nat x Bool
typeOf.lean:12:0: error: application type mismatch
  HasAdd.add r
argument
  r
has type
  Bool
but is expected to have type
  Nat
failed to synthesize instance
  CoeT Bool r Nat
typeOf.lean:20:48: error: invalid reassignment
  y == 1
has type
  Bool
but it is expected to have type
  Nat
failed to synthesize instance
  CoeT Bool (y == 1) Nat
